--- a/style.css
+++ b/style.css
@@ -423,14 +423,14 @@ th:last-child{
 }
 .about{
   flex-basis: 50%;
-  min-width: 650px;
+  min-width: 100%;
   margin-top: 50px;
 }
 .testimonial2{
   padding: 50px 0;
   background-image: url("images/aboutus.jpg");
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-size: cover;
   background-position: center; 
 }
@@ -581,7 +581,6 @@ input[type=submit]:hover {
 .col-6{
   width: 160px;
   padding-bottom: 50px;
-  padding-left: 45px;
   text-align: center;
 }
 .col-6 img{
@@ -594,7 +593,7 @@ input[type=submit]:hover {
 .row .col-6 h3{
   padding-top: 20px;
   padding-right: 30px;
-  padding-left: 20px;
+  padding-left: 25px;
   text-align: center;
 }
 .column2{
@@ -637,7 +636,7 @@ button:hover {
 }
 .signupbtn {
   padding: 10px 20px;
-  float: left;
+  margin-left: 25%;
   width: 50%;
   display: inline-block;
   background: #603e5f;
@@ -657,11 +656,31 @@ button:hover {
   }
 }
 @media screen and (max-width: 600px) {
+  .logo img{
+    width: 100px;
+  }
+  col-4{
+    width: 100%;
+    height: 200px;
+  }
+  col-4{
+    padding: 10px 0;
+  }
   .testimonial2{
-   width:400px;
+    padding: 5px 0px;
   }
-  .about p{
-    visibility: collapse;
+  .row{
+    margin-top: 20px;
   }
-
+  .main-title{
+    font-size: 35pt;
+  }
+  .sub-title{
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .title-text{
+    margin:0;
+    padding:0;
+  }
 }
